--- a/M-133-Projektarbeit-Zoo/pom.xml
+++ b/M-133-Projektarbeit-Zoo/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ch.muetzilla</groupId>
+    <groupId>dev.muetzilla</groupId>
     <artifactId>M-133-Projektarbeit-Zoo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>M-133-Projektarbeit-Zoo</name>
@@ -19,26 +19,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.json.bind</groupId>
-            <artifactId>javax.json.bind-api</artifactId>
-            <version>1.0</version>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>9.1.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-servlet-initializer</artifactId>
-            <version>4.6.1.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jackson2-provider</artifactId>
-            <version>4.6.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
