--- a/testing/data/projektarbeitZoo.properties
+++ b/testing/data/projektarbeitZoo.properties
@@ -4,6 +4,6 @@
 # date: 2022-05-11
 # ------------------------------
 # --- files
-zooJSON=
+zooJSON = C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\zoo.json
 gehegeJSON=
 tierJSON=
