--- a/testing/data/projektarbeitZoo.properties
+++ b/testing/data/projektarbeitZoo.properties
@@ -5,5 +5,5 @@
 # ------------------------------
 # --- files
 zooJSON = C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\zoo.json
-gehegeJSON=
-tierJSON=
+gehegeJSON= C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\gehege.json
+tierJSON= C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\tier.json
