--- a/testing/data/projektarbeitZoo.properties
+++ b/testing/data/projektarbeitZoo.properties
@@ -4,6 +4,6 @@
 # date: 2022-05-11
 # ------------------------------
 # --- files
-zooJSON = C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\zoo.json
-gehegeJSON= C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\gehege.json
-tierJSON= C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\tier.json
+zooJSON = C:\\Users\\muetz\\Documents\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\zoo.json
+gehegeJSON= C:\\Users\\muetz\\Documents\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\gehege.json
+tierJSON= C:\\Users\\muetz\\Documents\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\tier.json
