--- a/testing/data/projektarbeitZoo.properties
+++ b/testing/data/projektarbeitZoo.properties
@@ -4,7 +4,7 @@
 # date: 2022-05-11
 # ------------------------------
 # --- files
-zooJSON = C:\\Users\\muetz\\Documents\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\zoo.json
-enclosureJSON= C:\\Users\\muetz\\Documents\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\enclosure.json
-animalJSON=C:\\Users\\muetz\\Documents\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\animal.json
-userJSON = C:\\Users\\muetz\\Documents\\Github\\M-133-Projektarbeit-Zoo\\testing\\user.json
+zooJSON = C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\zoo.json
+enclosureJSON= C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\enclosure.json
+animalJSON= C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\data\\animal.json
+userJSON = C:\\Github\\M-133-Projektarbeit-Zoo\\testing\\user.json
